# Q-js

./: .babelrc  .esdoc.json  .eslintrc  .eslintrc.js  .gitignore  .npmignore  LICENSE  README.md  binding.gyp  coverage.json  identifiers.html  index.html  index.js  index.json  jest.config.js  libq.gyp  package-lock.json  package.json  source.html  test.ts  tsconfig.json  typedoc.js  win32-x64-57_binding.node
.circleci/: config.yml
backends/: index.js  printer.js  printer.spec.js  resource.js  resource.spec.js
backends/simulators/cppkernels/: CMakeLists.txt  Wrapper.cpp  Wrapper.hpp
cengines/: basicmapper.js  basicmapper.spec.js  basics.js  basics.spec.js  cmdmodifier.js  cmdmodifier.spec.js  ibm5qubitmapper.js  ibm5qubitmapper.spec.js  index.js  linearmapper.js  linearmapper.spec.js  main.js  main.spec.js  manualmapper.js  manualmapper.spec.js  optimize.js  optimize.spec.js  swapandcnotflipper.js  swapandcnotflipper.spec.js  tagremover.js  tagremover.spec.js  testengine.js  testengine.spec.js  twodmapper.js  twodmapper.spec.js
docs/: coverage.json  identifiers.html  index.html  index.json  source.html
examples/: grover.js  hws4.js  ibm.js  index.js  quantumrandomnumber.js  quantumrandomnumberibm.js  shor.js  teleport.js  teleport_circuit.js
function/: index.html
libs/: polyfill.js  util.js  util.spec.js
meta/: compute.js  compute.spec.js  control.js  control.spec.js  dagger.js  dagger.spec.js  dirtyqubit.js  error.js  index.js  logicalqubit.js  loop.js  loop.spec.js  tag.js  util.js  util.spec.js
ops/: _cycle.js  basics.js  basics.spec.js  command.js  (+14 more)
(+985 files in other folders)
